added users and responses

--- a/DoYouBelieve/client/templates/statement_item.html
+++ b/DoYouBelieve/client/templates/statement_item.html
@@ -2,6 +2,10 @@
   <div class="statement">
     <div class="statement-content">
       <h6>{{text}}</h6> - <em>{{speaker}}</em>
+      <div class="btn-group" role="group" aria-label="...">
+        <button type="button" class="btn btn-success true">True</button>
+        <button type="button" class="btn btn-danger false">False</button>
+      </div>
     </div>
   </div>
 </template>
